# robot-dynamic

./: .gitignore.txt  CMakeLists.txt  Chebyshef_40hz_Order3.cpp  Chebyshef_40hz_Order3.h  DH_dynamics.cpp  DH_dynamics.h  POE_kinematics.cpp  POE_kinematics.h  mian_dynamics.cpp  mian_dynamics.h  rtwtypes.h  vsCollisionDetection.cpp  vsCollisionDetection.h
others/: CorRobot.m  JacobianTest.m  JacobianTest.nb  fmin.m  get_maximal_linearly_independent_subset.m  inertia_cal.m
others/project_get_best_traj/: Check_Trajectory_legality.m  DH2Trans.m  Mdh_Corobot.m  Operator_K.m  Operator_S.m  TransMatrix.m  ZeroPhaseAverageFilter.m  constraint.m  draft.m  getCondOfY.m  getFourierTrajectory.m  getY.m  getYtilde.m  get_best_traj.m  get_ident_parameters.m  ident_parameters.txt  ture_least_para.m  ture_least_parameters.txt  ture_parameters.txt  x.txt
